# computer_vision

./: .gitignore  Claude_Project_Custom_Instructions.md  README.md  pyproject.toml  requirements_base.txt  requirements_project.txt  setup_base_environment_minimal.py
.claude/: CLAUDE.md
Project Knowledge/DSM/: DSM_2.0_ProjectManagement_Guidelines_v2_v1.1.md
Project_Knowledge/: KerasClassification_DE.ipynb  pre-trained-cnn-and-transfer-learning.ipynb  project_description.md
app/: .gitkeep
config/: config.yaml
docs/: PRESENTATION_GUIDE.md  PRESENTATION_QA.md
docs/checkpoints/: s01_d01_checkpoint.md  s01_d02_checkpoint.md  s01_d03_checkpoint.md  s01_d04_checkpoint.md
docs/decision_log/: decision_log.md
docs/plan/: Sprint1_Plan.md  Sprint2_Improvements.md  Sprint2_Plan.md
notebooks/: cifar10_classification.ipynb
scripts/: .gitkeep
src/cifar10/: __init__.py  config.py  data.py  evaluation.py  gradcam.py  model.py  training.py  utils.py
tests/: __init__.py
